Remove SSL configuration from environment files and database connection. Changes have been made to the DTOs and entities of the boards, changing the 'title' field to 'name'. Board service creation and update operations have been simplified. Additionally, Swagger references and the SSL certificate generation script have been removed.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "noFallthroughCasesInSwitch": false,
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "*.ts"],
   "exclude": ["node_modules", "dist"]
 }
