Enhance Docker and Drizzle Studio configuration. Added Drizzle Studio configuration file and updated docker-compose.yml to expose port 3001. Modified package.json to run drizzle-kit commands within Docker. Updated TODOs to reflect completion of tasks related to db:studio.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,3 @@
-# =============================================
-# docker-compose.yml Documentation
-# Version: 3.8
-# =============================================
-
 # Services
 services:
   # =============================================
@@ -20,6 +15,7 @@ services:
     # Default value: 3000
     ports:
       - '${PORT:-3000}:${PORT:-3000}'
+      - '3001:3001' # Expose port for Drizzle Studio
 
     # Environment variables
     # NODE_ENV: Development mode
