--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "docker:dev": "docker compose up --watch",
     "docker:dev:build": "docker compose up --build",
     "docker:down": "docker compose down",
-    "db:generate": "drizzle-kit generate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:generate": "docker compose exec api npx drizzle-kit generate",
+    "db:push": "docker compose exec api npx drizzle-kit push",
+    "db:studio": "docker compose exec api pnpm drizzle-kit studio --host=0.0.0.0 --port=3001 --config=drizzle.studio.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
